--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div class="boxes" id="box1"></div>
+        <div class="boxes" id="box2"></div>
+        <div class="boxes" id="box3"></div>
+        <div class="boxes" id="box4"></div>
+    </div>
 </body>
 </html>
