--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="container">
-        <div class="boxes" id="box1"></div>
-        <div class="boxes" id="box2"></div>
-        <div class="boxes" id="box3"></div>
-        <div class="boxes" id="box4"></div>
+        <div class="boxes" id="box1">
+            <h2>The Story of My Life</h2>
+            <p>Born in <span>Atlanta</span>, raised in Atlanta, but will not really ever remain faithful, Atlanta.</p>
+            <div class="readme-wrapper"><a href="#">Read More</a></div>
+        </div>
+        <div class="boxes" id="box2">
+            <h2>High School</h2>
+            <p>Attended <span>Pace Academy</span> for high school. Didn't love it.</p>
+            <div class="readme-wrapper"><a href="#">Read More</a></div>
+        </div>
+        <div class="boxes" id="box3">
+            <h2>College</h2>
+            <p>Went to <span>Vandy</span> for college. Didn't find programming until senior year.</p>
+            <div class="readme-wrapper"><a href="#">Read More</a></div>
+        </div>
+        <div class="boxes" id="box4">
+            <h2>Law School</h2>
+            <p>Because I did not know what I wanted to do after college, I attended <span>law school</span> the next fall.</p>
+            <div class="readme-wrapper"><a href="#">Read More</a></div>
+        </div>
     </div>
 </body>
+
 </html>
