finished box positioning

--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 <body>
     <div id="container">
         <div class="boxes" id="box1">
+            <div class="new-box"></div>
             <h2>The Story of My Life</h2>
             <p>Born in <span>Atlanta</span>, raised in Atlanta, but will not really ever remain faithful, Atlanta.</p>
             <div class="readme-wrapper"><a href="#">Read More</a></div>
         </div>
         <div class="boxes" id="box2">
+            <div class="new-box"></div>
             <h2>High School</h2>
             <p>Attended <span>Pace Academy</span> for high school. Didn't love it.</p>
             <div class="readme-wrapper"><a href="#">Read More</a></div>
         </div>
         <div class="boxes" id="box3">
+            <div class="new-box"></div>
             <h2>College</h2>
             <p>Went to <span>Vandy</span> for college. Didn't find programming until senior year.</p>
             <div class="readme-wrapper"><a href="#">Read More</a></div>
         </div>
         <div class="boxes" id="box4">
+            <div class="new-box"></div>
             <h2>Law School</h2>
             <p>Because I did not know what I wanted to do after college, I attended <span>law school</span> the next fall.</p>
             <div class="readme-wrapper"><a href="#">Read More</a></div>
